<resources>
    <string name="app_name">CH06_08_Dialog</string>
    <string name="bt1_text">1.雙鍵式對話框</string>
    <string name="bt2_text">2.多鍵式對話框</string>
    <string name="bt3_text">3.輸入型對話框</string>
    <string name="bt4_text">4.單選項型對話框</string>
    <string name="bt5_text">5.多選項型對話框</string>
    <string name="bt6_text">6.列表型對話框</string>
    <string name="bt7_text">7.自訂佈局對話框</string>
    <string name="bt8_text">8.進度型對話框</string>
    <string name="OK">確定</string>
    <string name="cancel">取消</string>
    <string name="on_idea">沒意見</string>
    <string name="input_code">輸入代碼</string>
    <string name="code">代碼</string>
    <string-array name="drink">
        <item>紅茶</item>
        <item>咖啡</item>
        <item>牛奶</item>
    </string-array>
    <string-array name="food">
        <item>漢堡</item>
        <item>排骨飯</item>
        <item>義大利麵</item>
    </string-array>
    <string name="locky_number">幸運數字</string>
    <string name="image_url">https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSNq1jyaU4T8N74W7Gv2sqKDmDXBwS-AI2l99bUu4KZumzkuEe_</string>
</resources>
