<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.main.MainActivity">

    <Button
        android:text="@string/bt1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:onClick="onClick"/>

    <Button
        android:text="@string/bt2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="onClick"/>

    <Button
        android:text="@string/bt3_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="onClick"/>

    <Button
        android:text="@string/bt4_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:onClick="onClick"/>

    <Button
        android:text="@string/bt5_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:onClick="onClick"/>

    <Button
        android:text="@string/bt6_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:onClick="onClick"/>

    <Button
        android:text="@string/bt7_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button7"
        android:onClick="onClick"/>

    <Button
        android:text="@string/bt8_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button8"
        android:onClick="onClick"/>
</LinearLayout>
